feat: basic game setup with cmakelist for building executables on windows, linux and macos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,31 @@
 cmake_minimum_required(VERSION 3.30)
-project(snake_game)
+project(SnakeXP)
 
 set(CMAKE_CXX_STANDARD 20)
+
+set(BASE_OUTPUT_DIR "${CMAKE_SOURCE_DIR}/build")
+
+if(WIN32)
+    set(OUTPUT_DIR "${BASE_OUTPUT_DIR}/windows")
+    add_compile_definitions(WIN32)
+elseif(UNIX AND NOT APPLE)
+    set(OUTPUT_DIR "${BASE_OUTPUT_DIR}/linux")
+    add_compile_definitions(LINUX)
+elseif(APPLE)
+    set(OUTPUT_DIR "${BASE_OUTPUT_DIR}/macos")
+    add_compile_definitions(MACOS)
+endif()
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR})
+
+foreach(CONFIG_TYPE ${CMAKE_CONFIGURATION_TYPES})
+    string(TOUPPER ${CONFIG_TYPE} CONFIG_TYPE)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONFIG_TYPE} ${OUTPUT_DIR})
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONFIG_TYPE} ${OUTPUT_DIR})
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONFIG_TYPE} ${OUTPUT_DIR})
+endforeach()
 
 include(FetchContent)
 
@@ -16,25 +40,18 @@ function(add_git_dependency libName gitURL gitTag)
     target_compile_options(${libName} PRIVATE "-w")
 endfunction()
 
-# Add Raylib
-set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # don't build the supplied examples
-set(BUILD_GAMES    OFF CACHE BOOL "" FORCE) # don't build the supplied example games
 add_git_dependency(
         raylib
         https://github.com/raysan5/raylib.git
         5.0
 )
 
-# Adding our source files
-# Define PROJECT_SOURCES as a list of all source files
 file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")
-
-# Define PROJECT_INCLUDE to be the path to the include directory of the project
 set(PROJECT_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/src/")
 
-# Declaring our executable
 add_executable(${PROJECT_NAME})
 target_sources(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INCLUDE})
-
 target_link_libraries(${PROJECT_NAME} PRIVATE raylib)
+
+target_compile_definitions(${PROJECT_NAME} PRIVATE RAYLIB_STATIC)
